canada file now shows fitted data

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "functioning-recycling",
+   "id": "activated-departure",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "impossible-coach",
+   "id": "impaired-kruger",
    "metadata": {},
    "source": [
     "SIR Model:\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "presidential-hawaiian",
+   "id": "applicable-disposition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,16 +51,15 @@
     "# Everyone else, S0, is susceptible to infection initially.\n",
     "S0 = N - I0 - R0 - V0\n",
     "# Contact rate, beta, and mean recovery rate, gamma, (in 1/days).\n",
-    "beta, gamma = 0.2, 1./10 \n",
+    "beta, gamma = 0.2, 1./10\n",
     "# A grid of time points (in days)\n",
-    "t = np.linspace(0, 300, 300)\n",
-    "dt = 300/300"
+    "t = np.linspace(0, 300, 300)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "alpha-valve",
+   "id": "agricultural-relief",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,14 +69,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "headed-psychology",
+   "id": "seventh-providence",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 0.002359628677368164\n",
+      "time: 0.004361629486083984\n",
       "Vaccinated people in total: 134999.99999999994\n",
       "4515.05016722408\n"
      ]
@@ -104,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "sealed-training",
+   "id": "answering-trainer",
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "certain-person",
+   "id": "finished-humidity",
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "technological-liechtenstein",
+   "id": "following-conviction",
    "metadata": {},
    "outputs": [
     {
